# more-tech-4-ananas-anaserver

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
src/ananews/: __init__.py  nlp.py  pipelines.py  trends.py
src/anaserver/: crud.py  database.py  main.py  ml.py
src/anaserver/models/: __init__.py  actions.py  attachments.py  news.py  news_embeddings.py  roles.py  sources.py  users.py  users_embeddings.py  users_to_news.py
src/anaserver/routers/: actions.py  news.py  roles.py  users.py
src/anaserver/schemas/: __init__.py  actions.py  attachments.py  news.py  news_embeddings.py  roles.py  sources.py  users.py  users_embeddings.py
