[tool.poetry]
name        = "anaserver"
version     = "0.1.0"
description = ""
authors     = ["Artyom Sosedka <sostema@gmail.com>"]
repository  = "https://github.com/itatmisis/more-tech-4-ananas-anaserver"
packages    = [{ include = "anaserver", from = "src" }, {include = "ananews", from = "src"}]

[tool.poetry.dependencies]
python  = "^3.8, <3.11"
aiogram = "^2.22.2"
environs = "^9.5.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
pgvector = "^0.1.6"
transformers = "^4.22.2"
scikit-learn = "^1.1.2"
torch = "^1.12.1"
greenlet = "^1.1.3"

[tool.poetry.group.type_check.dependencies]
mypy = "^0.982"

[tool.poetry.scripts]
anaserver-start = "anaserver.main:start_server"

[tool.poetry.group.lint.dependencies]
flake8                = "^5.0.4"
flake8-bugbear        = "^22.9.23"
flake8-broken-line    = "^0.6.0"
flake8-comprehensions = "^3.10.0"
pep8-naming           = "^0.13.2"
# TODO: Remove this when flake8 adds native support for pyproject.toml.
pyproject-flake8 = "^5.0.4.post1"

[tool.poetry.group.fmt.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes       = true
ignore_missing_imports = true
strict                 = false

[tool.flake8]
max-line-length = 120
extend-ignore   = ["E203"]

[tool.black]
line-length    = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile                    = "black"
line_length                = 120
force_sort_within_sections = true
src_paths                  = ["src/anaserver"]
skip_gitignore             = true

[tool.coverage.run]
branch = true
